--- a/www/index.html
+++ b/www/index.html
@@ -20,15 +20,19 @@
 
     <!-- your app's js -->
     <script src="app/app.js"></script>
+    <script src="app/home/home.js"></script>
+    <script src="app/courses/courses.js"></script>
+    <script src="app/times/times.js"></script>
+    <script src="app/invite/invite.js"></script>
+    <script src="services/courses.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="app">
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+    <ion-nav-bar class="bar-positive">
+      <ion-nav-back-button class="button-icon button-clear ion-ios7-arrow-back">
+      </ion-nav-back-button>
+    </ion-nav-bar>
+
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
