feat: Pane 1: Main Button transitions to pane 2 & Pane 3: Time Button transitions to Pane 4

--- a/mobile/www/app/home/home.html
+++ b/mobile/www/app/home/home.html
@@ -1,7 +1,5 @@
-<ion-view title="Home Page">
-   <ion-content>
-    <button class="button button-full button-positive">
-      Get Me Golf
-    </button>
-  </ion-content>
+<ion-view title="">
+     <a class="button button-full button-positive round-button viewPortCenter" href="#/tab/courses">
+      <div class="absoluteCenter">4ball</div>
+     </a>
 </ion-view>
