feat: panes 1 and 3 complete

--- a/mobile/www/app/invite/invite.html
+++ b/mobile/www/app/invite/invite.html
@@ -13,7 +13,7 @@
         <input type="email">
       </label>
       <ion-toggle>Invite Friends</ion-toggle>
-      <button class="button button-positive button-block">Invite</button>
+      <button class="button button-positive button-block">Go</button>
     </div>
   </ion-content>
 </ion-view>
