--- a/mobile/www/app/times/times.html
+++ b/mobile/www/app/times/times.html
@@ -1,15 +1,7 @@
 <ion-view title="Times Available">
-   <ion-content>
-
-<!--     <ion-list>
-      <ion-item><p>9:00am</p></ion-item>
-      <ion-item><p>12:00pm</p></ion-item>
-      <ion-item><p><p>2:00pm</p></p></ion-item>
-    </ion-list>
- -->    
-    <a class="button button-positive inline-button timeAlign" href="#/tab/invite">Time:1</a>
-    <a class="button button-positive inline-button timeAlign" href="#/tab/invite">Time:2</a>
-    <a class="button button-positive inline-button timeAlign" href="#/tab/invite">Time:3</a>
-
+  <ion-content>
+    <a class="button button-positive inline-button timeAlign" href="#/tab/invite">09:00am</a>
+    <a class="button button-positive inline-button timeAlign" href="#/tab/invite">12:00pm</a>
+    <a class="button button-positive inline-button timeAlign" href="#/tab/invite">04:00pm</a>
   </ion-content>
 </ion-view>
