--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -6,6 +6,8 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="./app/home/home.css" rel="stylesheet">
+    <link href="./app/times/times.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
