feat: blur pane

--- a/mobile/www/app/times/times.html
+++ b/mobile/www/app/times/times.html
@@ -1,8 +1,8 @@
 <ion-view title="Book Tee-Time">
-  <ion-content >
+  <ion-content  class="scroll-content2" >
 
     <ion-list min-height="500px">
-      <ion-item class="time-list scroll-content2"  type="item-text-wrap" href="#/tab/course/{{course.id}}">
+      <ion-item class="time-list"  type="item-text-wrap" href="#/tab/course/{{course.id}}">
         <h3>Course Name</h3>
         <p>Course Description</p>
       </ion-item>
