--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -24,6 +24,7 @@
     <script src="app/app.js"></script>
     <script src="app/home/home.js"></script>
     <script src="app/courses/courses.js"></script>
+    <script src="app/courses/details/details.js"></script>
     <script src="app/times/times.js"></script>
     <script src="app/invite/invite.js"></script>
     <script src="services/courses.js"></script>
