--- a/mobile/www/app/courses/details/details.html
+++ b/mobile/www/app/courses/details/details.html
@@ -5,7 +5,7 @@
   The Courses service returns an array of course data
 -->
 <ion-view title="{{course.title}}">
-  <ion-content padding="true">
+  <ion-content class="scroll-content2" padding="true">
     <p>{{ course.description }}</p>
     <p><a class="button button-small icon ion-arrow-left-b" href="#/tab/courses"> All Courses</a></p>
   </ion-content>
