--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -9,6 +9,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="./app/home/home.css" rel="stylesheet">
     <link href="./app/times/times.css" rel="stylesheet">
+    <link href="./app/courses/details/details.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
