add css to split pane 2 into three equal parts

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -8,6 +8,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="./app/home/home.css" rel="stylesheet">
+    <link href="./app/courses/courses.css" rel="stylesheet">
     <link href="./app/times/times.css" rel="stylesheet">
     <link href="./app/courses/details/details.css" rel="stylesheet">
 
