change icon for coureses view in footer to flag

--- a/mobile/www/app/app.html
+++ b/mobile/www/app/app.html
@@ -12,7 +12,7 @@
   </ion-tab>
 
   <!-- Courses Tab -->
-  <ion-tab title="Courses" icon="icon ion-beer" href="#/tab/courses">
+  <ion-tab title="Courses" icon="icon ion-flag" href="#/tab/courses">
     <ion-nav-view name="courses-tab"></ion-nav-view>
   </ion-tab>
 
