--- a/mobile/www/app/courses/courses.html
+++ b/mobile/www/app/courses/courses.html
@@ -6,9 +6,10 @@
 <ion-view title="Course Information">
   <ion-content>
     <ion-list>
-      <ion-item back-img="{{course.url}}" ng-repeat="course in courses" type="item-text-wrap" href="#/tab/course/{{course.id}}">
-        <h3>{{course.title}}</h3>
+      <ion-item back-img="{{course.url}}" ng-repeat="course in courses" type="item-text-wrap" href="#/tab/course/{{course._id}}">
+        <h3>{{course.name}}</h3>
         <p>{{course.description}}</p>
+        <p>{{course.address}}</p>
       </ion-item>
     </ion-list>
   </ion-content>
