--- a/mobile/www/app/invite/invite.html
+++ b/mobile/www/app/invite/invite.html
@@ -5,15 +5,14 @@
   <ion-content has-tabs="true">
     <div class="list list-inset">
       <label class="item item-input">
-        <span class="input-label">Your name</span>
-        <input type="text">
+        <span class="input-label">Your Name</span>
+        <input type="text" ng-model="userInfo.userName">
       </label>
       <label class="item item-input">
-        <span class="input-label">Your email</span>
-        <input type="email">
+        <span class="input-label" >(Area Code) + (Number)</span>
+        <input type="tel" ng-model="userInfo.userNumber">
       </label>
-      <ion-toggle>Invite Friends</ion-toggle>
-      <button class="button button-positive button-block">Go</button>
+      <button class="button button-positive button-block" ng-click="bookTime()">Book It</button>
     </div>
   </ion-content>
 </ion-view>
