--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -18,6 +18,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ui-utils.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ng-cordova.min.js"></script>
