navigate to invite page(pane 4) on tap of tee time on pane 3; pass courseId and teeTime as params to ui router

--- a/mobile/www/app/invite/invite.html
+++ b/mobile/www/app/invite/invite.html
@@ -5,6 +5,13 @@
   <ion-content has-tabs="true">
     <div class="list list-inset">
       <label class="item item-input">
+        <span class="input-label">{{course.name}}</span>
+      </label>
+      <label class="item item-input">
+        <span class="input-label">Tee Time:</span>
+        <span class="input-label pull-right">{{teeTime}}</span>
+      </label>
+      <label class="item item-input">
         <span class="input-label">Your Name</span>
         <input type="text" ng-model="userInfo.userName">
       </label>
