--- a/mobile/www/app/courses/details/details.html
+++ b/mobile/www/app/courses/details/details.html
@@ -16,7 +16,7 @@
     <div class="list" ng-show="dateSelected">
       <div class="item item-button-right translucent" ng-repeat="info in course.teetimes | filter: gteOrEqlSelectTeeTime | orderBy: 'time' | limitTo: limit">
         {{info.time}}
-        <a class="button icon-left ion-chevron-right button-clear button-dark" href="#/tab/invite"></a>
+        <a class="button icon-left ion-chevron-right button-clear button-dark" href="#/tab/invite/{{course._id}}/{{info.time}}"></a>
       </div>
     </div>
   </ion-content>
