--- a/mobile/www/app/courses/details/details.html
+++ b/mobile/www/app/courses/details/details.html
@@ -4,19 +4,19 @@
   The CourseCtrl pulls data from the Courses service (service.js)
   The Courses service returns an array of course data
 -->
-<ion-view title="{{course.name}}">
-  <ion-content back-img="{{course.url}}" padding="true">
-    <h3>{{course.name}}</h3>
-    <p>{{ course.description }}</p>
-    <p>{{course.address}}</p>
+<ion-view title="{{ vm.course.name }}">
+  <ion-content back-img="{{ vm.course.url }}" padding="true">
+    <h3>{{ vm.course.name }}</h3>
+    <p>{{ vm.course.description }}</p>
+    <p>{{ vm.course.address }}</p>
     <label class="item item-input translucent">
       <span class="input-label">Date</span>
-      <input type="datetime-local" ng-model="datetime" ui-event="{blur: 'getDateTime($event)'}">
+      <input type="datetime-local" ng-model="vm.datetime" ui-event="{blur: 'vm.getDateTime($event)'}">
     </label>
-    <div class="list" ng-show="dateSelected">
-      <div class="item item-button-right translucent" ng-repeat="info in course.teetimes | filter: gteOrEqlSelectTeeTime | orderBy: 'time' | limitTo: limit">
-        {{info.time}}
-        <a class="button icon-left ion-chevron-right button-clear button-dark" href="#/tab/invite/{{course._id}}/{{info.time}}/{{info._id}}"></a>
+    <div class="list" ng-show="vm.dateSelected">
+      <div class="item item-button-right translucent" ng-repeat="info in vm.course.teetimes | filter: vm.gteOrEqlSelectTeeTime | orderBy: 'time' | limitTo: vm.limit">
+        {{ info.time }}
+        <a class="button icon-left ion-chevron-right button-clear button-dark" href="#/tab/invite/{{vm.course._id}}/{{info.time}}/{{info._id}}"></a>
       </div>
     </div>
   </ion-content>
