--- a/mobile/www/app/courses/courses.html
+++ b/mobile/www/app/courses/courses.html
@@ -6,11 +6,28 @@
 <ion-view title="Course Information">
   <ion-content>
     <ion-list>
-      <ion-item back-img="{{course.url}}" ng-repeat="course in vm.courses" type="item-text-wrap" href="#/tab/course/{{course._id}}">
+<!--       <ion-item back-img="{{course.url}}" ng-repeat="course in vm.courses" type="item-text-wrap" href="#/tab/course/{{course._id}}">
         <h3>{{course.name}}</h3>
         <p>{{course.description}}</p>
         <p>{{course.address}}</p>
       </ion-item>
+ -->    
+      <ion-item ng-repeat="course in vm.courses" type="item-text-wrap">
+        <a href="#/tab/course/{{course._id}}">
+          <!-- <image src="{{course.url}}" style="display:block;padding:0px;"> -->
+          <image class="itemHeight" src="{{course.url}}"> 
+            <h3 style="position:absolute;left:0px;top:0px;font-size: 32px;">
+            {{course.name}}
+<!--               <p>{{course.description}}</p>
+              <p>{{course.address}}</p>            
+ -->
+            </h3>
+          </image>
+
+
+
+
+
     </ion-list>
   </ion-content>
 </ion-view>
