pane 4 formatting...commit before modifying pane2 css that may be affecting it

--- a/mobile/www/app/invite/invite.html
+++ b/mobile/www/app/invite/invite.html
@@ -19,6 +19,31 @@
         <span class="input-label" >(Area Code) + (Number)</span>
         <input type="tel" ng-model="vm.userInfo.userNumber">
       </label>
+<ul class="list">
+
+  <li class="item item-checkbox">
+     <label class="checkbox">
+       <input type="checkbox">
+     </label>
+     Wagon Wheels
+  </li>
+
+  <li class="item item-checkbox">
+     <label class="checkbox">
+       <input type="checkbox">
+     </label>
+     Wayne
+  </li>
+
+  <li class="item item-checkbox">
+     <label class="checkbox">
+       <input type="checkbox">
+     </label>
+     Shitbird
+  </li>
+
+</ul>
+
       <button class="button button-positive button-block" ng-click="vm.bookTime()">Book It</button>
     </div>
   </ion-content>
