added link to ngChecked, final commit before attempting map

--- a/mobile/www/app/invite/invite.html
+++ b/mobile/www/app/invite/invite.html
@@ -32,6 +32,8 @@
 
 
 <ul class="list">
+<!-- ng-checked -->
+<!-- https://docs.angularjs.org/api/ng/directive/ngChecked -->
 
   <li class="item item-checkbox">
      <label class="checkbox">
