Adds react bootstrap

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,13 +2,11 @@
     <head>
         <title>Create a new course</title>
 
-        <!-- Walk before we run. -->
-        <!-- Run this to build the project -->
-
-
     </head>
     <body>
         <div id="content"></div>
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
         <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
 
