--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -24,6 +24,11 @@
     <script src="lib/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
 
+    <!-- Google Maps Library -->
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkKQfI4s2awqv0EBdAXPFFIu6d0r67bMQ">
+    </script>
+    
     <!-- your app's js -->
     <script src="app/app.js"></script>
     <script src="app/home/home.js"></script>
