--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,6 +7,7 @@
         <div id="content"></div>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        <link href="app.css" rel="stylesheet"/>
 
         <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
 
