--- a/mobile/www/app/invite/invite.html
+++ b/mobile/www/app/invite/invite.html
@@ -13,52 +13,33 @@
       </label>
       <label class="item item-input item-display">
         <span class="input-label">Players:</span>
-        <span class="input-label pull-right"><!-- {{vm.teeTime}} --> 1</span>
+        <span class="input-label pull-right">1</span>
       </label>
 
       <button class="button button-positive button-block" ng-click="vm.bookTime()">Book It</button>
 
       <label class="item item-input">
-        <span class="input-label">Your Name</span>
-        <input type="text" ng-model="vm.userInfo.userName">
+        <input type="text" ng-model="vm.userInfo.userName" placeholder="First Name">
       </label>
       <label class="item item-input">
-        <span class="input-label">(Area Code) + (Number)</span>
-        <input type="tel" ng-model="vm.userInfo.userNumber">
+        <input type="tel" ng-model="vm.userInfo.userNumber" placeholder="Mobile Number">
       </label>
-    <label class="item item-input item-display">
-      <span class="input-label">Your Friends:</span>
-    </label>
 
+    <button class="button button-positive button-block">Invite Friends</button>
 
-<ul class="list">
-<!-- ng-checked -->
-<!-- https://docs.angularjs.org/api/ng/directive/ngChecked -->
+    <ul class="list">
+      <label class="item item-input item-display">
+         <span class="input-label">Wayne</span><span class="input-label pull-right">555-555-5555</span>
+      </label>
+      <label class="item item-input item-display">
+         <span class="input-label">Philip</span><span class="input-label pull-right">555-555-5555</span>
+      </label>
+      <label class="item item-input item-display">
+         <span class="input-label">Nick</span><span class="input-label pull-right">555-555-5555</span>
+      </label>
+      <button class="button button-positive button-block">Send Invites</button>
+    </ul>
 
-  <li class="item item-checkbox">
-     <label class="checkbox">
-       <input type="checkbox">
-     </label>
-     Wagon Wheels
-  </li>
-
-  <li class="item item-checkbox">
-     <label class="checkbox">
-       <input type="checkbox">
-     </label>
-     Wayne
-  </li>
-
-  <li class="item item-checkbox">
-     <label class="checkbox">
-       <input type="checkbox">
-     </label>
-     Shitbird
-  </li>
-
-    <button class="button button-positive button-block" ng-click="vm.bookTime()">Book It</button>
-</ul>
-
-    </div>
+    </div>  <!-- end class="list list-inset" -->
   </ion-content>
 </ion-view>
