--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -5,16 +5,13 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
     <link href="./app/home/home.css" rel="stylesheet">
     <link href="./app/courses/courses.css" rel="stylesheet">
     <link href="./app/times/times.css" rel="stylesheet">
     <link href="./app/courses/details/details.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
