implements hide/show buttons on pane-4

--- a/mobile/www/app/invite/invite.html
+++ b/mobile/www/app/invite/invite.html
@@ -20,7 +20,7 @@
       </label>
       <button class="button button-positive button-block" ng-click="vm.bookTime()">Book It</button>
 
-      <button class="button button-positive button-block">Invite Friends</button>
+      <button class="button button-positive button-block" ng-disabled="vm.isDisabled" ng-click="vm.isHidden = !vm.isHidden">Invite Friends</button>
 
     <ul class="list">
       <label class="item item-input item-display">
@@ -32,7 +32,7 @@
       <label class="item item-input item-display">
          <span class="input-label">Nick</span><span class="input-label pull-right">{{vm.cell_3}}</span>
       </label>
-      <button class="button button-positive button-block" ng-click="vm.sendInvites()">Send Invites</button>
+      <button class="button button-positive button-block" ng-click="vm.sendInvites()" ng-hide="vm.isHidden">Send Invites</button>
     </ul>
 
     </div>  <!-- end class="list list-inset" -->
